force-app/main/default/objects/TestObject1__c/TestObject1__c.object-meta.xml
<CustomObject>
    <description>Test Flow using objects.</description>
    <label>TestObject1</label>
    <nameField>
        <label>TestObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObject1s</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>