force-app/main/default/objects/TestObject1__c/fields/TestField1__c.field-meta.xml
<CustomField>
    <fullName>TestField1__c</fullName>
    <description>TestField1</description>
    <inlineHelpText>TestField1</inlineHelpText>
    <label>TestField1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>