force-app/main/default/objects/TestObject1__c/fields/testField2__c.field-meta.xml
<CustomField>
    <fullName>testField2__c</fullName>
    <inlineHelpText>testField2</inlineHelpText>
    <label>testField2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>