force-app/main/default/objects/TestObject1__c/fields/testField3__c.field-meta.xml
<CustomField>
    <fullName>testField3__c</fullName>
    <label>testField3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>