force-app/main/default/objects/TestObject1__c/fields/testPicklist__c.field-meta.xml
<CustomField>
    <fullName>testPicklist__c</fullName>
    <inlineHelpText>testPicklist</inlineHelpText>
    <label>testPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select1</fullName>
            </value>
            <value>
                <fullName>Select2</fullName>
            </value>
            <value>
                <fullName>Select3</fullName>
            </value>
            <value>
                <fullName>Select4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>