force-app/main/default/objects/TestObject1__c/recordTypes/TestRecordType1.recordType-meta.xml
<RecordType>
    <fullName>TestRecordType1</fullName>
    <active>true</active>
    <description>TestRecordType1</description>
    <label>TestRecordType1</label>
</RecordType>