force-app/main/default/objects/TestObject1__c/recordTypes/testRecordType2.recordType-meta.xml
<RecordType>
    <fullName>testRecordType2</fullName>
    <active>true</active>
    <description>testRecordType2</description>
    <label>testRecordType2</label>
</RecordType>